--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,46 @@
 <resources>
-    <string name="app_name">Bademjoon</string>
+    <string name="app_name">Bademjon</string>
+
+    <string name="profile">Profile</string>
+    <string name="diet">Diet</string>
+    <string name="home">Home</string>
+    <string name="sport">Sport</string>
+    <string name="setting">Setting</string>
+
+
+    <string name="calories">Calories</string>
+    <string name="receipt">Receipt</string>
+    <string name="left_over">Left Over</string>
+    <string name="burned">Burned</string>
+    <string name="fat">Fat</string>
+    <string name="protein">Protein</string>
+    <string name="carbohydrate">Carbohydrate</string>
+    <string name="gram">Gram</string>
+    <string name="suggested">Suggested</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
+
+
+    <string name="name_and_surname">Name and Surname</string>
+    <string name="height">Height</string>
+    <string name="weight">Weight</string>
+    <string name="age">Age</string>
+    <string name="around_the_wrist">Around The Wrist</string>
+    <string name="activity_rate">Activity Rate</string>
+    <string name="gender">Gender</string>
+    <string name="special_disease">Special Disease</string>
+
+    <string name="rate1">Low</string>
+    <string name="rate2">Medium</string>
+    <string name="rate3">Much</string>
+
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+
+    <string name="ihave">Have</string>
+    <string name="idhave">Don\'t Have</string>
+
+    <string name="language">Switch Language</string>
+    <string name="clear">Decrease</string>
 </resources>
